--- a/assets/templates/layout.html
+++ b/assets/templates/layout.html
@@ -6,7 +6,7 @@
 
         <ul>
 
-            {% for link in links %}
+            {% for link in primaryNav %}
                 <li><a href="{{ link.href }}">{{ link.title }}</a></li>
             {% endfor %}
         </ul>
