finsih inistail Build class

--- a/assets/template/layout.html
+++ b/assets/template/layout.html
@@ -14,7 +14,7 @@
     <div class="content">
         <h1>Well this is nice</h1>
 
-        {{ "I like %s and %s."|format("that", "bar") }}
+        {{ "I like %s and %s."|format("this", "that") }}
         {{ content }}
     </div>
 
