update layout template to add pagetitle

--- a/assets/template/layout.html
+++ b/assets/template/layout.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <head>
     <link rel="stylesheet" href="{{ rootUrl }}/css/bootstrap.min.css">
-    <title>{{ title }}</title>
+    <title>{{ pageTitle }}</title>
 </head>
 <body>
 <div class="container-fluid">
