--- a/assets/template/layout.html
+++ b/assets/template/layout.html
@@ -1,25 +1,87 @@
 <!doctype html>
+<!--[if lt IE 7]>
+<html class="no-js ie6 oldie" lang="en"> <![endif]-->
+<!--[if IE 7]>
+<html class="no-js ie7 oldie" lang="en"> <![endif]-->
+<!--[if IE 8]>
+<html class="no-js ie8 oldie" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="en"> <!--<![endif]-->
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+    <!--
+        This site was made using
+         ____                          _
+        / ___| _ __   _____      _____| |__   ___   ___
+        \___ \| '_ \ / _ \ \ /\ / / __| '_ \ / _ \ / _ \
+         ___) | | | | (_) \ V  V /\__ \ | | | (_) |  __/
+        |____/|_| |_|\___/ \_/\_/ |___/_| |_|\___/ \___|
+
+        A dead simple static site generator for PHP.
+        http://getsnowshoe.com
+    -->
+
+
+    <title>{{ pageTitle }} | {{ siteName }}</title>
+
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+
+    <link href='http://fonts.googleapis.com/css?family=Terminal+Dosis:800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ rootUrl }}/css/bootstrap.min.css">
-    <title>{{ pageTitle }}</title>
+    <link rel="stylesheet" href="{{ rootUrl }}/css/style.css">
+
+    <script src="{{ rootUrl }}/js/libs/modernizr-2.0.6.min.js"></script>
 </head>
+
 <body>
-<div class="container-fluid">
-    <div class="sidebar">
-        <ul>
+<a href="http://github.com/edvanbeinum/snowshoe"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/ce742187c818c67d98af16f96ed21c00160c234a/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f677261795f3664366436642e706e67" alt="Fork me on GitHub"></a>
+<div class=" container">
+<header>
+    <h1>Snowshoe</h1>
+</header>
+<div role="main" class="row">
+    <div class="span-one-third">
+        <ul class="pills">
             {% for link in primaryNavigation %}
             <li><a href="{{ link.url }}">{{ link.title }}</a></li>
             {% endfor %}
         </ul>
     </div>
-    <div class="content">
-        <h1>Well this is nice</h1>
-
-        {{ "I like %s and %s."|format("this", "that") }}
+    <div class="span-two-thirds">
         {{ content }}
     </div>
 
 
 </div>
-</body>
+<footer>
+    <p><a href="http://edvanbeinum.com">Ed van Beinum</a> 2011</p>
+</footer>
+</div>
 
+<!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
+mathiasbynens.be/notes/async-analytics-snippet -->
+<script>
+    var _gaq = [
+        ['_setAccount','UA-XXXXX-X'],
+        ['_trackPageview'],
+        ['_trackPageLoadTime']
+    ];
+    (function(d, t) {
+        var g = d.createElement(t),s = d.getElementsByTagName(t)[0];
+        g.src = ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js';
+        s.parentNode.insertBefore(g, s)
+    }(document, 'script'));
+</script>
+
+
+<!--[if lt IE 7 ]>
+<script defer src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
+<script defer>window.attachEvent('onload', function() {
+    CFInstall.check({mode:'overlay'})
+})</script>
+<![endif]-->
+
+</body>
+</html>
