--- a/assets/template/layout.html
+++ b/assets/template/layout.html
@@ -45,7 +45,7 @@
     <div class="span-one-third">
         <ul class="pills">
             {% for link in primaryNavigation %}
-            <li><a href="{{ link.url }}">{{ link.title }}</a></li>
+            <li><a href="{{ rootUrl }}{{ link.url }}">{{ link.title }}</a></li>
             {% endfor %}
         </ul>
     </div>
